--- a/dash-app/assets/2-index.css
+++ b/dash-app/assets/2-index.css
@@ -221,3 +221,10 @@ body {
 .rc-slider-handle:focus {
   border-color: #007eff;
 }
+
+.solutionStatus {
+  color: red;
+  font-size: 0.85rem;
+  font-weight: 600;
+  margin-top: 1.5rem;
+}
